--- a/src/components/home/main.css
+++ b/src/components/home/main.css
@@ -5,13 +5,14 @@
     color: #9e9ea4;
     font-family: 'Montserrat', sans-serif;
   }
-  #sidebar{
-    background-color: #3C79F5;
-  }
+ 
   .icon {
     vertical-align: middle;
     line-height: 1px;
     font-size: 20px;
+    background-color: #3C79F5;
+    color: white;
+    background-color: transparent;
   }
   .icon_header {
     vertical-align: middle;
@@ -47,31 +48,28 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 30px 0 30px;
-    box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+    padding: 20px 20px 0 15px;
+    /* box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35); */
   }
-  
+  .dash{
+    font-size: 24px;
+    color: black;
+    font-weight: 700;
+  }
   .menu-icon {
     display: none;
   }
   /* End Header  */
   
   /* Sidebar  */
-  #sidebar {
-    grid-area: sidebar;
-    height: 100%;
-    /* background-color: #263043; */
-    overflow-y: auto;
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-  }
+  
   
   .sidebar-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 30px 0px 30px;
-    margin-bottom: 30px;
+    /* padding: 15px 30px 0px 30px;
+    margin-bottom: 30px; */
   }
   
   .sidebar-title > span {
@@ -103,7 +101,7 @@
   
   .sidebar-list-item > a {
     text-decoration: none;
-    color: #9e9ea4;
+    color: white;
   }
   
   .sidebar-responsive {
@@ -122,10 +120,13 @@
   
   /* Main  */  
   .main-container {
+    display: flex;
+    flex-direction: column;
     grid-area: main;
     overflow-y: auto;
+    height: 100%;
     padding: 20px 20px;
-    color: rgba(255, 255, 255, 0.95);
+    /* color: rgba(255, 255, 255, 0.95); */
   }
   
   .main-title {
@@ -135,9 +136,12 @@
   
   .main-cards {
     display: grid;
+    flex: 0.5;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
-    margin: 15px 0;
+    /* margin: 15px 0; */
+    margin-bottom: 15px;
+
   }
   
   .card {
@@ -147,12 +151,26 @@
     padding: 8px 15px;
     border-radius: 5px;
     background-color: white;
+    -webkit-box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+    -moz-box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+    box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
   }
   .card-inner{
+    display: flex;
+    flex-direction: column;
     background-color: white;
     color: black;
   }
-  
+  .twop{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+  }
+  .iconref{
+    background-color: #3C79F5;
+    color: white;
+  }
   /* .card:first-child {
     background-color: #2962ff;
   }
@@ -181,12 +199,162 @@
   
   .charts {
     display: grid;
+    grid-template-columns: 1fr ;
+    gap: 20px;
+    /* margin-top: 20px; */
+    flex:1;
+    flex-direction: column;
+    background-color: white;
+    -webkit-box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+-moz-box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+   border-radius: 20px;
+   margin-bottom: 0px;
+  }
+  .Act{
+    font-size: 18px;
+    font-weight: 700;
+    color: black;
+  }
+  .date{
+    font-size: 14px;
+    font-weight: 400;
+    color: black;
+  }
+  .info{
+    flex-direction: column;
+
+  }
+  .tags{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+  }
+  .guestIcon{
+    color: #7FCD93;
+  }
+  .userIcon{
+    color: #EE8484;
+  }
+  .guest{
+    color: black;
+  }
+  .user{
+    color: black;
+  }
+  .barChart{
+    background-color: transparent;
+  }
+  .innerCharts{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top:15px;
+    margin-left: 15px;
+    background-color: transparent;
+    margin-bottom: 0px;
+  }
+  .iconDiv{
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    color: white;
+    background-color: #7FCD93;
+  }
+  .bottomDiv{
+    display: grid;
+    /* align-items: center;
+    justify-content: center; */
+    flex: 1;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    margin-top: 60px;
-    height: 300px;
+    margin-top: 15px;
+    height: 200px;
+    color: black;
+    padding: 8px;
   }
-  
+  .pieChart{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 20px;
+    -webkit-box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+-moz-box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+    max-height: 200px;
+    overflow-y: hidden;
+  }
+  .innerPie{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px;
+    margin-bottom: 0;
+  }
+  .mainGraph{
+    position: relative;
+    left:10px
+  }
+  .tees{
+    color: #98D89E;
+  }
+  .pants{
+     color: #F6DC7D;
+  }
+  .hoodies{
+    color: #EE8484;
+  }
+  .PieDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  .detailDiv{
+    display: flex;
+    flex-direction: column;
+  }
+  .comp3{
+    display: flex;
+    margin-bottom: 15px;
+  }
+  .comp2{
+    display: flex;
+    flex-direction: column;
+  }
+  .Add{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    -webkit-box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+-moz-box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+box-shadow: 2px 0px 20px -3px rgba(0,0,0,0.24);
+max-height: 200px;
+   border-radius: 20px;
+  }
+  .plusDiv{
+    border-radius: 50%;
+    height: 76px;
+    width: 76px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #999CA0;
+    background-color: #F5F5F5;
+  }
+  .plus{
+    background-color: transparent;
+  }
+  .addProfile{
+    background-color: transparent;
+    color: #9e9ea4;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: 600;
+  }
   /* End Main  */
   
   
@@ -206,6 +374,8 @@
     }
   
     .menu-icon {
+      color: #3C79F5;
+      background-color: transparent;
       display: inline;
     }
   
@@ -234,5 +404,70 @@
     .hedaer-left {
       display: none;
     }
+  }
+  #sidebar {
+    grid-area: sidebar;
+    height: 100%;
+    /* background-color: #263043; */
+    overflow-y: auto;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    width: 85%;
+    height: 94%;
+    margin: auto;
+    border-radius: 20px;
+    background-color: #3C79F5;
+    margin-left: 20px;
+  }
+  .title{
+    font-size: 36px;
+    font-weight: 700;
+    color: white;
+    padding-bottom: 22px;
+  }
+  .help{
+    padding-top: 200px;
+    font-size: 14px;
+    color: white;
+  }
+  .contact{
+    font-size: 14px;
+    padding-top: 10px;
+    margin-top: 0;
+    color: white;
+  }
+  .search{
+    color: black;
+    background-color: white;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    padding: 10px;
+  }
+  .sch{
+    background-color: white;
+    color: black;
+    padding: auto;
+  }
+  .Headericon{
+    color: black;
+    background-color: transparent;
+    padding: 0 8px;
+  }
+  .header-right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .search-icon {
+    margin-left: -30px; /* Adjust the margin as needed to control the icon's position */
+  }
+  .searchDiv{
+    background-color: white;
+    border-radius: 20px;
+    padding: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   
