--- a/src/components/home/modal.css
+++ b/src/components/home/modal.css
@@ -12,6 +12,11 @@
     border-radius: 20px;
     padding-top: 16px;
 }
+@media(max-height:990px){
+    .modalContainer{
+        height: 40%;
+    }
+}
 .modal-wrapper {
     position: fixed;
     left: 0;
@@ -47,8 +52,12 @@ margin-bottom: 10px;
 background-color: transparent;
 }
 .profileHr{
-    border-color: #f2f2f2;
-    width:100%;
+    /* border-color: #fffdfd; */
+    width: 100%;
+    border-top: 0.1px solid #d6d3d3;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
 }
 .option{
     display: flex;
@@ -119,4 +128,36 @@ input[type="number"] {
 }
 .first{
     margin-top: 10px;
+}
+.buttons{
+    flex-direction: row-reverse;
+    margin-right: 30px;
+}
+.next{
+    width: 55px;
+    height: 40px;
+    padding: 8px 10px;
+    background-color: #3E84F8;
+    color: white;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 20%;
+}
+.back{
+    width: 55px;
+    height: 40px;
+    padding: 8px 10px;
+    background-color: transparent;
+    color: black;
+    cursor: pointer;
+    border: 0.2px solid black;
+    outline: none;
+    border-radius: 20%;
+    margin-right: 10px;
+}
+.back:hover{
+   background-color: #3E84F8;
+   color: white;
+   border: none;
 }
