--- a/src/components/home/modal.css
+++ b/src/components/home/modal.css
@@ -14,7 +14,8 @@
 }
 @media(max-height:990px){
     .modalContainer{
-        height: 40%;
+        height: 60%;
+        width: 65%;
     }
 }
 .modal-wrapper {
