--- a/src/components/auth/Signin.css
+++ b/src/components/auth/Signin.css
@@ -2,6 +2,7 @@
     display: flex;
      height: 100vh;
     /* width: 100vw; */ 
+    /* background-color: #F8FAFF; */
 }
 .sideDiv{
    display: flex;
@@ -52,13 +53,14 @@
     flex-direction: column;
     /* margin-left: 200px; */
     margin: auto;
-   
+    /* background-color: #F8FAFF; */
 }
 .signinForm{
     display: flex;
     flex: 1;
     padding: auto;
     flex-direction: column;
+    align-items: center;
 }
 .buttons{
     display: flex;
@@ -77,7 +79,10 @@
    display: flex;
    align-items: center;
         justify-content: center;
+        cursor: pointer;
+        border: 0.1px solid black;
 }
+
 .text{
     margin-bottom: 10px;
 }
@@ -93,7 +98,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
+        border: 0.1px solid black;
 }
+
+
 .p{
     margin-bottom: 5px;
     background-color: white;
@@ -168,6 +177,7 @@
     margin-top: 15px;
 }
 .register{
+    cursor: pointer;
     color: #3C79F5;
 }
 .signup{
