--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   background-color: #EEEEEE;
   margin: 0;
   padding: 0;
-  
+  /* font-family: 'Montserrat', sans-serif; */
 }
 /* .App {
   text-align: center;
