--- a/src/components/auth/Signin.css
+++ b/src/components/auth/Signin.css
@@ -18,7 +18,7 @@
     color: white;
     margin-top: 20px;
     margin-left: 50px;
-   
+    font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: 30px;
 }
@@ -45,6 +45,7 @@
 }
 .formDiv{
     /* margin-top: 300px; */
+    /* border:2px solid blue; */
     flex: 1;
     display: flex;
     align-items: center;
@@ -55,17 +56,23 @@
     margin: auto;
     /* background-color: #F8FAFF; */
 }
+
+#h1{
+  /* border:2px solid rgb(26, 85, 136); */
+  padding-left: 30px;
+}
 .signinForm{
+    /* border:2px solid red; */
     display: flex;
     flex: 1;
     padding: auto;
     flex-direction: column;
-    align-items: center;
+    
 }
 .buttons{
     display: flex;
     flex-direction: row;
-
+    padding-left: 30px;
 }
 .google{
     background-color: white;
@@ -85,6 +92,7 @@
 
 .text{
     margin-bottom: 10px;
+    padding-left: 30px;
 }
 .apple{
         border-radius: 10px;;
@@ -100,6 +108,7 @@
         justify-content: center;
         cursor: pointer;
         border: 0.1px solid black;
+        margin-left: -2px;
 }
 
 
@@ -130,13 +139,13 @@
 }
 .parae{
     background-color: white;
-    margin-left: -219px;
+    margin-left: -290px;
     margin-bottom: 5px;
     font-size: 15px;
 }
 .parap{
     background-color: white;
-    margin-left: -250px;
+    margin-left: -310px;
     margin-bottom: 5px;
     font-size: 15px;
 }
@@ -163,7 +172,7 @@
 .forgot{
     color: #3C79F5;
     background-color: white;
-    margin-left: -200px;
+    margin-left: -250px;
 }
 .Submit{
     border-radius: 10px;
@@ -200,7 +209,7 @@
          display: flex;
          flex-direction: row;
         background-color: #3C79F5;
-         border:2px solid red;
+         /* border:2px solid red; */
          align-items: center; /* Center items horizontally */
          transform: skewX(0deg); /* Adjust the angle of the tilt */
          transform-origin: top;
@@ -220,13 +229,13 @@
         margin: auto;
         font-weight: bold;
         font-size: 50px;
-        border:5px solid black;
+        /* border:5px solid black; */
     }
     
     .icons{
         background-color: #3C79F5;
         margin: auto;
-        border:2px solid green;
+        /* border:2px solid green; */
     }
     .github{
         background-color: #3C79F5;
